[package]
name = "osmium"
version = "0.1.0"
authors = ["Jan-hendrik Brink <https://github.com/Boilingtub>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "22.0"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.18.0", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"

[dependencies.image]
version = "0.24"
default-features = false 
features = ["png", "jpeg", "webp"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
